--- a/Archigram/Base.lproj/LaunchScreen.storyboard
+++ b/Archigram/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16B2659" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,14 +18,41 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="house" translatesAutoresizingMaskIntoConstraints="NO" id="Fs6-0J-m56">
+                                <rect key="frame" x="141.66666666666669" y="220" width="131.00000000000006" height="131"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="131" id="3Sq-Yy-vSf"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="131" id="CEl-AN-8zi"/>
+                                    <constraint firstAttribute="height" constant="131" id="ci7-09-juI"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="openingText" translatesAutoresizingMaskIntoConstraints="NO" id="ZDE-Es-miv">
+                                <rect key="frame" x="111" y="381" width="192" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="192" id="dhd-jQ-fJR"/>
+                                    <constraint firstAttribute="height" constant="26" id="z4l-a0-Tx1"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.42352941176470588" green="0.82745098039215681" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="Fs6-0J-m56" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="K8S-Ay-j4x"/>
+                            <constraint firstItem="ZDE-Es-miv" firstAttribute="top" secondItem="Fs6-0J-m56" secondAttribute="bottom" constant="30" id="QUR-Vi-C8O"/>
+                            <constraint firstItem="Fs6-0J-m56" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="200" id="Vak-D6-L38"/>
+                            <constraint firstItem="ZDE-Es-miv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="d6n-f5-b5r"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="50.724637681159422" y="374.18478260869568"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="house" width="196" height="196"/>
+        <image name="openingText" width="282" height="36"/>
+    </resources>
 </document>
